# TestCICD

./: .gitignore  AWS ECRをterraformで.md  AWSとOIDCするためにIAMロールを作成する.md  README.md  cargo-aws-lambdaでDockerfileを作成する.md
.github/workflows/: infra_cicd.yml  lambda_cicd.yml  main.yml  workflow.yml
client/api_client/: Cargo.toml  build.rs
client/api_client/proto/: hello_req.proto  hello_res.proto
client/api_client/src/: main.rs
client/api_client/src/gen_proto/: hello_req.rs  hello_res.rs  mod.rs
iam_role/: iam-role.yaml  iam-role.yaml.bak2
lambda/hello/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.bak1  backup.Dockerfile.bak  build.rs
lambda/hello/proto/: hello.proto
lambda/hello/src/: main.rs  proto.rs  repo_trait.rs  usecase.rs
lambda/hello/src/app/: mod.rs  repo_trait.rs
lambda/hello/src/db/: db_model.rs  db_repo.rs  impl_db_repo.rs  mod.rs
lambda/hello/src/gen_proto/: hello.rs
lambda/hello/src/tests/: mod.rs  test_case.rs  test_repo.rs
lambda/world/: Cargo.toml  Dockerfile  Dockerfile.bak1
lambda/world/src/: main.rs
terraform/: api_gw.tf  api_method_hello.tf  api_method_world.tf  certificate.tf  cloud_fr.tf  dynamo_db.tf  lambda.tf  logging.tf  note.md  provider.tf  state_bucket.tf  terraform.tfstate  variables.tf  vpc.tf
terraform/prod/: api_gw.tf  api_method_hello.tf  api_method_world.tf  budget.tf  cloud_front.tf  cloudwatch.tf  dynamo_db.tf  ecr.tf  lambda-iam.tf  lambda.tf  logging.tf  main.tf  provider.tf  sg.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  vpc.tf  waf_acl.tf
terragrunt/envs/: backend.tf  terragrunt.hcl
terragrunt/envs/prod/: env.hcl
terragrunt/modules/apigw_deploy/: deploy.tf  input_deploy.tf  logging.tf  output.tf
terragrunt/modules/apigw_method/: input_method.tf  method.tf  output.tf
terragrunt/modules/apigw_rest/: apigw.tf  input_apigw.tf  output.tf
terragrunt/modules/budget/: budget.tf  input.tf
terragrunt/modules/cloudfront/: cloudfront.tf  input_cfr.tf  (+3 more)
(+29 files in other folders)
