[package]
name = "hello"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.55.2"
aws-sdk-dynamodb = "0.27.0"
derive_builder = "0.12.0"
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1.0.71"
typed-builder = "0.14.0"
async-trait = "0.1.51"
mockall = {version = "0.11.4"}
bytes = "1.4.0"
prost = "0.11.9"
protobuf = "3.2.0"

[build_dependencies]
prost-build = { version = "0.11.9"}
protobuf-codegen = "3.2.0"
# clippyを使う
[dev-dependencies]
clippy = "0.0.302"
